# HumanAnd

./: .gitignore  README.md  agent.py  bot.py  llm.py  main.py  plan.md  pyproject.toml
dashboard/: index.html
projects/: new_human_and_model.txt
projects/MagicMock/mock.conversations_info().__getitem__().__getitem__()/4435125200/: messages.txt
projects/MagicMock/mock.conversations_info().__getitem__().__getitem__()/4436192912/: messages.txt
projects/MagicMock/mock.conversations_info().__getitem__().__getitem__()/4436240592/: messages.txt
projects/new_human_and_model/: ground_truth.txt  messages.txt
projects/test_channel/: ground_truth.txt  messages.txt
projects/testproject/: messages.txt
prompts/: compaction.md  pr_alignment.md
src/app/: entrypoint.py
src/handlers/: slack_events.py
src/services/: dashboard_service.py  github_monitor.py  llm_service.py  project_service.py
src/stores/: db.py
src/utils/: history.py
tests/: test_agent.py  test_bot.py  test_dashboard.py  test_db.py  test_github_monitor.py  test_ground_truth.py  test_history.py  test_llm.py  test_slack_connection.py
